fixed spacing issue across browsers

--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@
   font-family: 'Inconsolata', monospace;
   font-size: 14px;
   overflow: auto;
-  margin-top: -22px;
-
+  margin-top: -35px;
 }
 
 .flex-center{
